@@ -77,6 +77,12 @@ typedef struct {
 
 typedef int_fast32_t sam_sid_t;  /* stream id number */
 
+typedef struct {
+	socket_t sock;  /* the socket used for communications with SAM */
+	bool connected;  /* whether the socket is connected */
+	sam_sid_t prev_id;  /* the last stream id number we used */
+} sam_sess_t;  /* a SAM session */
+
 typedef enum {  /* see sam_strerror() for detailed descriptions of these */
 	/* error codes from SAM itself (SAM_OK is not an actual "error") */
 	SAM_OK, SAM_CANT_REACH_PEER, SAM_DUPLICATED_DEST, SAM_I2P_ERROR,
@@ -90,12 +96,17 @@ typedef enum {  /* see sam_strerror() for detailed descriptions of these */
  * Public functions
  */
 
-/* SAM controls */
-extern bool		sam_close();
-extern samerr_t	sam_connect(const char *samhost, uint16_t samport,
-					const char *destname, sam_conn_t style, uint_t tunneldepth);
-extern void		sam_naming_lookup(const char *name);
-extern bool		sam_read_buffer();
+/* SAM controls - sessions */
+extern sam_sess_t *sam_session_init(sam_sess_t *session);
+extern void		sam_session_free(sam_sess_t **session);
+/* SAM controls - connection */
+extern bool		sam_close(sam_sess_t *session);
+extern samerr_t	sam_connect(sam_sess_t *session, const char *samhost,
+					uint16_t samport, const char *destname, sam_conn_t style,
+					uint_t tunneldepth);
+/* SAM controls - utilities */
+extern void		sam_naming_lookup(sam_sess_t *session, const char *name);
+extern bool		sam_read_buffer(sam_sess_t *session);
 extern const char *sam_strerror(samerr_t code);
 /* SAM controls - callbacks */
 extern void		(*sam_diedback)();
@@ -104,24 +115,26 @@ extern void		(*sam_namingback)(char *name, sam_pubkey_t pubkey,
 					samerr_t result);
 
 /* Stream commands */
-extern void		sam_stream_close(sam_sid_t stream_id);
-extern sam_sid_t sam_stream_connect(const sam_pubkey_t dest);
-extern samerr_t	sam_stream_send(sam_sid_t stream_id, const void *data,
-					size_t size);
+extern void		sam_stream_close(sam_sess_t *session, sam_sid_t stream_id);
+extern sam_sid_t sam_stream_connect(sam_sess_t *session,
+					const sam_pubkey_t dest);
+extern samerr_t	sam_stream_send(sam_sess_t *session, sam_sid_t stream_id,
+					const void *data, size_t size);
 /* Stream commands - callbacks */
 extern void		(*sam_closeback)(sam_sid_t stream_id, samerr_t reason);
 extern void		(*sam_connectback)(sam_sid_t stream_id, sam_pubkey_t dest);
 extern void		(*sam_databack)(sam_sid_t stream_id, void *data, size_t size);
 extern void		(*sam_statusback)(sam_sid_t stream_id, samerr_t result);
 
-/* Stream send queue */
-extern void		sam_sendq_add(sam_sid_t stream_id, sam_sendq_t **sendq,
-					const void *data, size_t dsize);
-extern void		sam_sendq_flush(sam_sid_t stream_id, sam_sendq_t **sendq);
+/* Stream send queue (experimental) */
+extern void		sam_sendq_add(sam_sess_t *session, sam_sid_t stream_id,
+					sam_sendq_t **sendq, const void *data, size_t dsize);
+extern void		sam_sendq_flush(sam_sess_t *session, sam_sid_t stream_id,
+					sam_sendq_t **sendq);
 
 /* Datagram commands */
-extern samerr_t	sam_dgram_send(const sam_pubkey_t dest, const void *data,
-					size_t size);
+extern samerr_t	sam_dgram_send(sam_sess_t *session, const sam_pubkey_t dest,
+					const void *data, size_t size);
 
 /* Datagram commands - callbacks */
 extern void		(*sam_dgramback)(sam_pubkey_t dest, void *data, size_t size);
